--- a/day2/02.03_CreationDeForm.md
+++ b/day2/02.03_CreationDeForm.md
@@ -124,6 +124,8 @@ namespace WebApplicationNovembre.Controllers
 
 ![Snippet BootStrap](/images/day2/02.12.png)
 
+Et si on regarde dans notre debeugeur, on voit les données POST qui sont envoyés.
+
 ![Snippet BootStrap](/images/day2/02.13.png)
 
 
