added code extract

--- a/day2/02.04_AttributsdeModel.md
+++ b/day2/02.04_AttributsdeModel.md
@@ -112,3 +112,49 @@ On peut encore y rajouter une expression reguliere par dessus)
 Il est également possible de 'copier' les validations d'un attribut existant.
 
 ``` [Compare("Password",ErrorMessage = "La confirmation est invalide")] //permet de comparer avec une propriété (donc tous les trucs de password) ```
+
+Ma class user finale ressemble à ceci:
+
+```Csharp
+
+using System;
+using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace ModelsLibrary.Models
+{
+    public class User
+    {
+        [Display(Name="Nom")]
+        [Required()]
+        public string Name { get; set; }
+
+        [Display(Name="Prénom")]
+        public string FirstName { get; set; }
+
+        [Required(ErrorMessage = "Entrez votre Email")]
+        [DataType(DataType.EmailAddress)]
+        public string Mail { get; set; }
+
+        [Display(Name = "Mot de pass please")]
+        [Required(ErrorMessage = "Entrez un mdp")]
+        [DataType(DataType.Password)]
+        [StringLength(15,MinimumLength =6, ErrorMessage = "mdp de 6")]
+        [RegularExpression("^plop.+")]
+        public string Password { get; set; }
+    
+        [Display(Name = "Confirmation du MDP")]
+        [DataType(DataType.Password)]
+        [Compare("Password",ErrorMessage = "La confirmation est invalide")] //permet de comparer avec une propriété (donc tous les trucs de password)
+
+        //[CustomValidation()]
+        public string ConfirmedPassword { get; set; }
+
+    }
+}
+
+
+```
