commit day3 pause  matin

--- a/day1/01.01_Introduction.md
+++ b/day1/01.01_Introduction.md
@@ -35,6 +35,7 @@ Traitements:
 
 ![Changement de config](/images/day1//01.02_WebConfig.png)
 
+
 # Configuration de Visual Studio (Pour lancement plus facile).
 
 ![Changement de config](/images/day1//01.05_ChangementConfig.png)
@@ -43,10 +44,18 @@ Desactiver le "Enable Edit And Continue" permet de lancer le IIS une fois. Lorsq
 
 Pour Stopper IIS on le stopperas directement sur IIS:
 
-![Changement de config](/images/day1//01.06_StopIIS.png)
+![Stop IIS](/images/day1//01.06_StopIIS.png)
+
+## Global.Asax
+
+Le fichier Global.asax contient une methode **Application_Start()** qui est appeler au démarrage du server IIS.
+
+![GlobalAsax](/images/day1//01.03_Global.asax.png)
+
+On vois que les routes sont ajoutés au server via ```RouteConfig.RegisterRoutes(RouteTable.Routes);```.
 
 
-## Comment ajouter un controller:
+## Comment ajouter un controller?:
 
 > Un controlleur c'est une **class** qui herite de **controleur** qui s'apelle **QqchControler.cs**. C'est tout (!)
 
