--- a/day1/01.02_AddcustomRoute.md
+++ b/day1/01.02_AddcustomRoute.md
@@ -1,3 +1,11 @@
+# Routing
+
+Dans une rpojet MVC, le chemin suivant est **toujours** suivie:
+
+http://monSite/**contact/edit/**
+
+> inclure dessin
+
 ## Comment ajouter une custom route?
 
 dans le fichier **RouteConfig.cs**
